Project1/HaliteStarterPackage/1-212308.log
 --- Init ---
  File "MyBot.py", line 28
 --- Bot used 467 milliseconds ---
-----------------------------------------------------------------------------
 --- Frame #1 ---
    return sum(neighbor.strength for neighborin game_map.neighbors(square if neighbor.owner not in (0, myID)))
 --- Bot used 0 milliseconds ---
ERRORED!
Response received (if any):
    return sum(neighbor.strength for neighborin game_map.neighbors(square if neighbor.owner not in (0, myID)))
 --- Bot was killed. Below is the rest of its output (if any): ---
                                                       ^
SyntaxError: invalid syntax

 --- End bot output ---